--- a/Monthly Daycon Flight Delay Prediction AI Competition.ipynb
+++ b/Monthly Daycon Flight Delay Prediction AI Competition.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Monthly Daycon Flight Delay Prediction AI Competition "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## data pre-processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### function import"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -37,6 +58,13 @@
     "import nltk \n",
     "from nltk.corpus import stopwords\n",
     "# ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load Data"
    ]
   },
   {
@@ -200,7 +228,7 @@
     }
    ],
    "source": [
-    "# 데이터 불러오기\n",
+    "### 학습용 데이터 불러오기\n",
     "\n",
     "file_path = 'D:\\Code\\월간 데이콘 항공편 지연 예측 AI 경진대회/train.csv'\n",
     "\n",
@@ -210,6 +238,8 @@
     "\n",
     "print('*'*80)\n",
     "\n",
+    "### 평가용 데이터 불러오기\n",
+    "\n",
     "file_path = 'D:\\Code\\월간 데이콘 항공편 지연 예측 AI 경진대회/test.csv'\n",
     "\n",
     "df_test = pd.read_csv(file_path)\n",
@@ -218,11 +248,217 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 컬럼의 설명 주석\n",
+    "- 'Estimated_Departure_Time' : 예상 출발 시간\n",
+    "- 'Estimated_Arrival_Time' : 예상 도착 시간\n",
+    "- 'Diverted' : 회항(방향전환)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['ID', 'Month', 'Day_of_Month', 'Estimated_Departure_Time',\n",
+      "       'Estimated_Arrival_Time', 'Cancelled', 'Diverted', 'Origin_Airport',\n",
+      "       'Origin_Airport_ID', 'Origin_State', 'Destination_Airport',\n",
+      "       'Destination_Airport_ID', 'Destination_State', 'Distance', 'Airline',\n",
+      "       'Carrier_Code(IATA)', 'Carrier_ID(DOT)', 'Tail_Number', 'Delay'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = df_train.columns\n",
+    "\n",
+    "print(columns) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 학습용 데이터의 결측치 확인 및 제거"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID                               0\n",
+      "Month                            0\n",
+      "Day_of_Month                     0\n",
+      "Estimated_Departure_Time    109019\n",
+      "Estimated_Arrival_Time      109040\n",
+      "Cancelled                        0\n",
+      "Diverted                         0\n",
+      "Origin_Airport                   0\n",
+      "Origin_Airport_ID                0\n",
+      "Origin_State                109015\n",
+      "Destination_Airport              0\n",
+      "Destination_Airport_ID           0\n",
+      "Destination_State           109079\n",
+      "Distance                         0\n",
+      "Airline                     108920\n",
+      "Carrier_Code(IATA)          108990\n",
+      "Carrier_ID(DOT)             108997\n",
+      "Tail_Number                      0\n",
+      "Delay                       744999\n",
+      "dtype: int64\n",
+      "                  ID  Month  Day_of_Month  Estimated_Departure_Time  \\\n",
+      "0       TRAIN_000000      4            15                       NaN   \n",
+      "1       TRAIN_000001      8            15                     740.0   \n",
+      "2       TRAIN_000002      9             6                    1610.0   \n",
+      "3       TRAIN_000003      7            10                     905.0   \n",
+      "4       TRAIN_000004      1            11                     900.0   \n",
+      "...              ...    ...           ...                       ...   \n",
+      "999995  TRAIN_999995      9            18                     936.0   \n",
+      "999996  TRAIN_999996      5            30                     920.0   \n",
+      "999997  TRAIN_999997      6            28                     800.0   \n",
+      "999998  TRAIN_999998      9            27                    1613.0   \n",
+      "999999  TRAIN_999999      3            26                    1800.0   \n",
+      "\n",
+      "        Estimated_Arrival_Time  Cancelled  Diverted Origin_Airport  \\\n",
+      "0                          NaN          0         0            OKC   \n",
+      "1                       1024.0          0         0            ORD   \n",
+      "2                       1805.0          0         0            CLT   \n",
+      "3                       1735.0          0         0            LAX   \n",
+      "4                       1019.0          0         0            SFO   \n",
+      "...                        ...        ...       ...            ...   \n",
+      "999995                  1243.0          0         0            ORD   \n",
+      "999996                  1028.0          0         0            FAR   \n",
+      "999997                  1340.0          0         0            OAK   \n",
+      "999998                  1824.0          0         0            BNA   \n",
+      "999999                  2056.0          0         0            RSW   \n",
+      "\n",
+      "        Origin_Airport_ID    Origin_State Destination_Airport  \\\n",
+      "0                   13851        Oklahoma                 HOU   \n",
+      "1                   13930        Illinois                 SLC   \n",
+      "2                   11057  North Carolina                 LGA   \n",
+      "3                   12892      California                 EWR   \n",
+      "4                   14771      California                 ACV   \n",
+      "...                   ...             ...                 ...   \n",
+      "999995              13930             NaN                 PHL   \n",
+      "999996              11637             NaN                 MSP   \n",
+      "999997              13796             NaN                 HOU   \n",
+      "999998              10693       Tennessee                 ATL   \n",
+      "999999              14635         Florida                 DTW   \n",
+      "\n",
+      "        Destination_Airport_ID Destination_State  Distance  \\\n",
+      "0                        12191             Texas     419.0   \n",
+      "1                        14869              Utah    1250.0   \n",
+      "2                        12953          New York     544.0   \n",
+      "3                        11618        New Jersey    2454.0   \n",
+      "4                        10157        California     250.0   \n",
+      "...                        ...               ...       ...   \n",
+      "999995                   14100               NaN     678.0   \n",
+      "999996                   13487         Minnesota     223.0   \n",
+      "999997                   12191             Texas    1642.0   \n",
+      "999998                   10397               NaN     214.0   \n",
+      "999999                   11433          Michigan    1084.0   \n",
+      "\n",
+      "                       Airline Carrier_Code(IATA)  Carrier_ID(DOT)  \\\n",
+      "0       Southwest Airlines Co.                 WN          19393.0   \n",
+      "1        SkyWest Airlines Inc.                 UA          20304.0   \n",
+      "2       American Airlines Inc.                 AA          19805.0   \n",
+      "3        United Air Lines Inc.                 UA              NaN   \n",
+      "4        SkyWest Airlines Inc.                 UA          20304.0   \n",
+      "...                        ...                ...              ...   \n",
+      "999995   United Air Lines Inc.                 UA          19977.0   \n",
+      "999996   SkyWest Airlines Inc.                 DL              NaN   \n",
+      "999997  Southwest Airlines Co.                 WN          19393.0   \n",
+      "999998    Delta Air Lines Inc.                 DL          19790.0   \n",
+      "999999                     NaN                 DL          19790.0   \n",
+      "\n",
+      "       Tail_Number Delay  \n",
+      "0           N7858A   NaN  \n",
+      "1           N125SY   NaN  \n",
+      "2           N103US   NaN  \n",
+      "3           N595UA   NaN  \n",
+      "4           N161SY   NaN  \n",
+      "...            ...   ...  \n",
+      "999995      N477UA   NaN  \n",
+      "999996      N439SW   NaN  \n",
+      "999997      N230WN   NaN  \n",
+      "999998      N968DL   NaN  \n",
+      "999999      N695DL   NaN  \n",
+      "\n",
+      "[1000000 rows x 19 columns]\n",
+      "********************************************************************************\n",
+      "                  ID  Month  Day_of_Month  Cancelled  Diverted Origin_Airport  \\\n",
+      "0       TRAIN_000000      4            15          0         0            OKC   \n",
+      "1       TRAIN_000001      8            15          0         0            ORD   \n",
+      "2       TRAIN_000002      9             6          0         0            CLT   \n",
+      "3       TRAIN_000003      7            10          0         0            LAX   \n",
+      "4       TRAIN_000004      1            11          0         0            SFO   \n",
+      "...              ...    ...           ...        ...       ...            ...   \n",
+      "999995  TRAIN_999995      9            18          0         0            ORD   \n",
+      "999996  TRAIN_999996      5            30          0         0            FAR   \n",
+      "999997  TRAIN_999997      6            28          0         0            OAK   \n",
+      "999998  TRAIN_999998      9            27          0         0            BNA   \n",
+      "999999  TRAIN_999999      3            26          0         0            RSW   \n",
+      "\n",
+      "        Origin_Airport_ID Destination_Airport  Destination_Airport_ID  \\\n",
+      "0                   13851                 HOU                   12191   \n",
+      "1                   13930                 SLC                   14869   \n",
+      "2                   11057                 LGA                   12953   \n",
+      "3                   12892                 EWR                   11618   \n",
+      "4                   14771                 ACV                   10157   \n",
+      "...                   ...                 ...                     ...   \n",
+      "999995              13930                 PHL                   14100   \n",
+      "999996              11637                 MSP                   13487   \n",
+      "999997              13796                 HOU                   12191   \n",
+      "999998              10693                 ATL                   10397   \n",
+      "999999              14635                 DTW                   11433   \n",
+      "\n",
+      "        Distance Tail_Number  \n",
+      "0          419.0      N7858A  \n",
+      "1         1250.0      N125SY  \n",
+      "2          544.0      N103US  \n",
+      "3         2454.0      N595UA  \n",
+      "4          250.0      N161SY  \n",
+      "...          ...         ...  \n",
+      "999995     678.0      N477UA  \n",
+      "999996     223.0      N439SW  \n",
+      "999997    1642.0      N230WN  \n",
+      "999998     214.0      N968DL  \n",
+      "999999    1084.0      N695DL  \n",
+      "\n",
+      "[1000000 rows x 11 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_nulls = df_train.isnull().sum()\n",
+    "\n",
+    "print(n_nulls)\n",
+    "\n",
+    "# 8개의 컬럼을 제거\n",
+    "\n",
+    "print(df_train)\n",
+    "\n",
+    "print('*'*80)\n",
+    "\n",
+    "cleaned_df_train = df_train.drop(columns=['Estimated_Departure_Time','Estimated_Arrival_Time','Origin_State','Destination_State','Airline','Carrier_Code(IATA)','Carrier_ID(DOT)','Delay'])\n",
+    "\n",
+    "print(cleaned_df_train)\n",
+    "\n",
+    "# 1. df_train.dropna(subset=[\n",
+    "## subset의 axis는 어치파 인 지워도 됨. 누락값을 지울거니까. 컬럼만 지정해줄 때 쓰는 subset.\n",
+    "# 2. Delay가 정답컬럼과 연관이 있는지..? "
+   ]
   }
  ],
  "metadata": {
