--- a/Monthly Daycon Flight Delay Prediction AI Competition.ipynb
+++ b/Monthly Daycon Flight Delay Prediction AI Competition.ipynb
@@ -8,6 +8,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#안녕하세요. 데이콘입니다.\n",
+    "#\n",
+    "#이번 대회는 LogLoss를 통해 모델의 성능을 평가하기에,\n",
+    "#predict가 아닌 predict_proba를 이용해서 추론을 진행했습니다.\n",
+    "#\n",
+    "#데이콘 베이스라인은 모든 참가자의 '제출'을 목표로 합니다. \n",
+    "#해당 내용에 관한 질문은 [토크] 게시판에 게시해 주세요.\n",
+    "#\n",
+    "#베이스라인이 여러분만의 고도화된 모델 작성에 도움이 되면 좋겠습니다.\n",
+    "#\n",
+    "#감사합니다. \n",
+    "#데이콘 드림\n",
+    "\n",
+    "'''\n",
+    "-train.csv [파일]\n",
+    "1,000,000개의 데이터\n",
+    "ID : 샘플 고유 id\n",
+    "항공편 운항 관련 정보\n",
+    "Month: 해당 항공편의 출발 월\n",
+    "Day_of_Month: Month에 해당하는 월의 날짜\n",
+    "Estimated_Departure_Time: 전산 시스템을 바탕으로 측정된 비행기의 출발 시간 (현지 시각, HH:MM 형식)\n",
+    "Estimated_Arrival_Time: 전산 시스템을 바탕으로 측정된 비행기의 도착 시간 (현지 시각, HH:MM 형식)\n",
+    "Cancelled: 해당 항공편의 취소 여부 (0: 취소되지 않음, 1: 취소됨)\n",
+    "Diverted: 해당 항공편의 경유 여부 (0: 취소되지 않음, 1: 취소됨)\n",
+    "Origin_Airport: 해당 항공편 출발 공항의 고유 코드 (IATA 공항 코드)\n",
+    "Origin_Airport_ID: 해당 항공편 출발 공항의 고유 ID (US DOT ID)\n",
+    "Origin_State: 해당 항공편 출발 공항이 위치한 주의 이름\n",
+    "Destination_Airport: 해당 항공편 도착 공항의 고유 코드 (IATA 공항 코드)\n",
+    "Destination_Airport_ID: 해당 항공편 도착 공항의 고유 ID (US DOT ID)\n",
+    "Destination_State: 해당 항공편 도착 공항이 위치한 주의 이름\n",
+    "Distance: 출발 공항과 도착 공항 사이의 거리 (mile 단위)\n",
+    "Airline: 해당 항공편을 운항하는 항공사\n",
+    "Carrier_Code(IATA): 해당 항공편을 운항하는 항공사의 고유 코드 \n",
+    "(IATA 공항 코드, 단 다른 항공사가 같은 코드를 보유할 수도 있음)\n",
+    "Carrier_ID(DOT): 해당 항공편을 운항하는 항공사의 고유 ID (US DOT ID)\n",
+    "Tail_Number: 해당 항공편을 운항하는 항공기의 고유 등록번호\n",
+    "Delay: 항공편 지연 여부 (Not_Delayed, Delayed)\n",
+    "예측해야 하는 타깃\n",
+    "다수의 데이터에 레이블이 존재하지 않음\n",
+    "준지도학습을 통해 레이블링 가능\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "test.csv [파일]\n",
+    "1,000,000개의 데이터\n",
+    "ID : 샘플 고유 id\n",
+    "항공편 운항 관련 정보\n",
+    "Month: 해당 항공편의 출발 월\n",
+    "Day_of_Month: Month에 해당하는 월의 날짜\n",
+    "Estimated_Departure_Time: 전산 시스템을 바탕으로 측정된 비행기의 출발 시간 (현지 시각, HH:MM 형식)\n",
+    "Estimated_Arrival_Time: 전산 시스템을 바탕으로 측정된 비행기의 도착 시간 (현지 시각, HH:MM 형식)\n",
+    "Cancelled: 해당 항공편의 취소 여부 (0: 취소되지 않음, 1: 취소됨)\n",
+    "Diverted: 해당 항공편의 경유 여부 (0: 취소되지 않음, 1: 취소됨)\n",
+    "Origin_Airport: 해당 항공편 출발 공항의 고유 코드 (IATA 공항 코드)\n",
+    "Origin_Airport_ID: 해당 항공편 출발 공항의 고유 ID (US DOT ID)\n",
+    "Origin_State: 해당 항공편 출발 공항이 위치한 주의 이름\n",
+    "Destination_Airport: 해당 항공편 도착 공항의 고유 코드 (IATA 공항 코드)\n",
+    "Destination_Airport_ID: 해당 항공편 도착 공항의 고유 ID (US DOT ID)\n",
+    "Destination_State: 해당 항공편 도착 공항이 위치한 주의 이름\n",
+    "Distance: 출발 공항과 도착 공항 사이의 거리 (mile 단위)\n",
+    "Airline: 해당 항공편을 운항하는 항공사\n",
+    "Carrier_Code(IATA): 해당 항공편을 운항하는 항공사의 고유 코드 \n",
+    "(IATA 공항 코드, 단 다른 항공사가 같은 코드를 보유할 수도 있음)\n",
+    "Carrier_ID(DOT): 해당 항공편을 운항하는 항공사의 고유 ID (US DOT ID)\n",
+    "Tail_Number: 해당 항공편을 운항하는 항공기의 고유 등록번호\n",
+    "\n",
+    "- sample_submission.csv [제출양식]\n",
+    "ID : 샘플 고유 id\n",
+    "Not_Delayed: 특정 샘플에 해당하는 항공편이 지연되지 않을 확률\n",
+    "Delayed: 특정 샘플에 해당하는 항공편이 지연될 확률\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From d:\\Anaconda\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "WARNING:tensorflow:From c:\\Users\\human\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "\n"
      ]
     }
@@ -38,8 +124,14 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
+    "#ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n",
+    "import random\n",
+    "import os\n",
+    "import gc\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "#ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import matplotlib.pyplot as plt\n",
@@ -47,17 +139,227 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.metrics.pairwise import linear_kernel\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from lightgbm import LGBMClassifier\n",
     "# ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n",
     "import tensorflow as tf\n",
-    "\n",
     "from transformers import pipeline, set_seed, BertTokenizer, TFBertForSequenceClassification\n",
-    "\n",
     "# ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n",
     "import re\n",
     "import nltk \n",
     "from nltk.corpus import stopwords\n",
-    "# ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n"
+    "# ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ\n",
+    "from sentence_transformers import SentenceTransformer\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baseline 코드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def seed_everything(seed):\n",
+    "    random.seed(seed)\n",
+    "    os.environ['PYTHONHASHSEED']=str(seed)\n",
+    "    np.random.seed(seed)\n",
+    "seed_everything(42) #Seed 고정"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## csv to parquet \n",
+    "- 메모리에 효율적인 데이터 유형을 사용하여 용량을 줄이고 빠른 작업이 가능."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def csv_to_parquet(csv_path, save_name):\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "    df.to_parquet(f'./{save_name}.parquet')\n",
+    "    del df\n",
+    "    gc.collect()\n",
+    "    print(save_name, 'Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_to_parquet('./train.csv', 'train' )\n",
+    "csv_to_parquet('./test.csv', 'test')\n",
+    "\n",
+    "# train done\n",
+    "# tewt done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_parquet('./train.parquet')\n",
+    "test = pd.read_parquet('./test.parquet')\n",
+    "sample_submission = pd.read_csv('sample_submission.csv', index_col = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Pre-Processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 레이블(Delay)을 제외한 결측값이 존재하는 변수들을 학습 데이터의 최빈값으로 대체함\n",
+    "NaN_col = ['Origin_State', 'Destination_State', 'Airline', 'Estimated_Departure_Time', 'Estimated_Arrival_Time', 'Carrier_Code(IATA)', 'Carrier_ID(DOT)']\n",
+    "\n",
+    "for col in NaN_col:\n",
+    "    mode = train[col].mode()[0]\n",
+    "    train[col] = train[col].fillna(mode)\n",
+    "    \n",
+    "    if col in test.columns:\n",
+    "        test[col] = test[col].fillna(mode)\n",
+    "print('Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#질적 변수들을 수치화\n",
+    "qual_col = ['Origin_Airport', 'Origin_State', 'Destination_Airport', 'Destination_State', 'Airline', 'Carrier_Code(IATA)', 'Tail_Number']\n",
+    "\n",
+    "for i in qual_col:\n",
+    "    le = LabelEncoder()\n",
+    "    le=le.fit(train[i])\n",
+    "    train[i]=le.transform(train[i])\n",
+    "    \n",
+    "    for label in np.unique(test[i]):\n",
+    "        if label not in le.classes_: \n",
+    "            le.classes_ = np.append(le.classes_, label)\n",
+    "    test[i]=le.transform(test[i])\n",
+    "print('Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#레이블이 없는 데이터들을 제거합니다\n",
+    "train = train.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_number = {}\n",
+    "for i, column in enumerate(sample_submission.columns):\n",
+    "    column_number[column] = i\n",
+    "    \n",
+    "def to_number(x, dic):\n",
+    "    return dic[x]\n",
+    "\n",
+    "train.loc[:, 'Delay_num'] = train['Delay'].apply(lambda x: to_number(x, column_number))\n",
+    "print('Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x = train.drop(columns=['ID', 'Delay', 'Delay_num'])\n",
+    "train_y = train['Delay_num']\n",
+    "test_x = test.drop(columns=['ID'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification Model Fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = clf.predict_proba(test_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame(data=y_pred, columns=sample_submission.columns, index=sample_submission.index)\n",
+    "\n",
+    "submission.to_csv('baseline_submission.csv', index=True)"
    ]
   },
   {
@@ -259,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +619,7 @@
       "Tail_Number                      0\n",
       "Delay                       744999\n",
       "dtype: int64\n",
+      "********************************************************************************\n",
       "                  ID  Month  Day_of_Month  Estimated_Departure_Time  \\\n",
       "0       TRAIN_000000      4            15                       NaN   \n",
       "1       TRAIN_000001      8            15                     740.0   \n",
@@ -445,6 +748,8 @@
     "\n",
     "print(n_nulls)\n",
     "\n",
+    "print('*'*80)\n",
+    "\n",
     "# 8개의 컬럼을 제거\n",
     "\n",
     "print(df_train)\n",
@@ -463,7 +768,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rollbackTarget",
+   "display_name": "NvulyTarget",
    "language": "python",
    "name": "conda"
   },
